--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,7 +63,7 @@ jobs:
       # Tag the Docker image
       - name: Tag Docker Image
         run: |
-          docker tag cc ${{ secrets.DOCKER_HUB_USERNAME }}/smsml:latest
+          docker tag smsml ${{ secrets.DOCKER_HUB_USERNAME }}/smsml:latest
 
       # Push Docker image to Docker Hub
       - name: Push Docker Image
